[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "markdown_convert"
version = "1.1.7"
description = "Convert Markdown files to PDF from your command line."
authors = ["Julio Cabria <juliocabria@tutanota.com>"]
license = "GPL-2.0-only"
readme = "README.md"
homepage = "https://github.com/Julynx/markdown_convert"
include = ["markdown_convert/default.css", "markdown_convert/code.css"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
argsdict = "1.0.0"
setuptools = ">=46.0.0"
weasyprint = "^61.2"
markdown2 = "^2.4.13"
pygments = "^2.17.2"

[tool.poetry.scripts]
markdown-convert = "markdown_convert.__main__:main"
